Fixed alignment of icons and removed unnecessary chunk

--- a/frontend/src/scss/global.scss
+++ b/frontend/src/scss/global.scss
@@ -97,6 +97,10 @@ body {
   cursor: move;
 }
 
+.vertical-baseline {
+  vertical-align: baseline;
+}
+
 .pb-safe {
   padding-bottom: env(safe-area-inset-bottom);
 }
